- 
    Bug 
- 
    Resolution: Done
- 
    P4: Low 
- 
    5.13.1
- 
    Desktop
- 
        
- 
        455e9e5be35b36d79b9541a6e014c5c9026d685b (qt/qtbase/5.14)
When changing display from 100 % to 200% does increases the icon size but does not makes anuy changes in the trayICon menu rather it chopps it off.
Qt::AA_EnableHighDpiScaling has no effect either.
Attached example reproduces it
Steps to reproduce
- Launch app
- Change scaling
- Note menu is wrongly sized
Note: Does not manifest once the menu is triggered in the old resolution
- relates to
- 
                    QTBUG-79227 QSystemTrayIcon geometry is incorrect in High DPI environments -         
- Closed
 
-         
- 
                    QTBUG-102343 Windows: Only initial QScreen values are available if screen geometry changes between QApplication and before first window is open -         
- Closed
 
-         

