src/plugins/platforms/windows/qwindowsscreen.h
@@ -131,6 +131,8 @@ public:
     using WindowsScreenList = QList<QWindowsScreen *>;
 
     QWindowsScreenManager();
+    void initialize();
+    ~QWindowsScreenManager();
 
     void clearScreens();
 
@@ -145,6 +147,7 @@ public:
 private:
     void removeScreen(int index);
 
+    HWND m_displayChangeObserver = nullptr;
     WindowsScreenList m_screens;
 };
 
